src/index.css
@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Monomaniac+One&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  /* Home Page NavBar Classes */
  .nav-icon {
    /* Nav Button */
    @apply relative mx-auto mb-2 mt-2 
           flex size-12 items-center justify-center rounded-3xl
           bg-gradient-to-r from-blue-500 to-indigo-500
           shadow-lg;
  }
  .nav-tooltip {
    /* Text Tooltip on NavIcon hover */
    @apply absolute left-14 -z-20 m-2 w-auto min-w-max
           scale-0 rounded-md
           bg-indigo-500 p-2
           font-kode text-xs font-bold text-white shadow-md;
  }
  /* Home Page Name Classes */
  .name-letter {
    /* Pixel art icon */
    @apply text-5xl text-white lg:text-9xl;
  }

  .home-section {
    @apply mt-16 flex h-fit w-full flex-wrap items-center justify-evenly;
  }

  .placeholder {
    @apply flex h-screen items-center justify-center text-9xl text-white;
  }

  .page-title {
    @apply mb-6 flex h-fit w-full justify-center space-x-14 text-8xl text-white overflow-visible;
  }

  .panel-default {
    @apply relative h-auto w-auto max-w-[60%] rounded-2xl bg-gradient-to-r from-blue-500 to-indigo-500 p-3 shadow-xl;
  }

  .panel-title {
    @apply justify-start text-3xl text-white;
  }

  .panel-body {
    @apply text-wrap text-xl text-white flex flex-col;
  }

  .panel-button {
    @apply text-white shadow-xl px-2 py-1 m-1 ml-auto bg-gradient-to-r from-blue-800 to-indigo-900;
  }
}

/* Global applications */
@layer base {
  /* h-full and overflow hidden allow the background to display properly */
  html {
    @apply h-full overflow-hidden bg-gray-600 font-default;
  }

  /* Fixed property hides overscrolling*/
  body {
    @apply fixed h-screen w-screen overflow-auto;
  }
}

